--- a/index.html
+++ b/index.html
@@ -48,6 +48,31 @@
                 </li>
             </ul>
         </div>
+        <h1 class="header-movies">Feedback</h1>
+        <div class="feedback-wrapper">
+            <div class="feedback-form">
+                <form name="contact" method="POST" data-netlify="true">
+                    <p>
+                      <label>Your Name: <input type="text" name="name" /></label>   
+                    </p>
+                    <p>
+                      <label>Your Email: <input type="email" name="email" /></label>
+                    </p>
+                    <p>
+                      <label>Message: <textarea name="message"></textarea></label>
+                    </p>
+                    <p>
+                        <div data-netlify-recaptcha="true"></div>
+                    </p>
+                    <p>
+                      <button type="submit" class="btn-submit">Send</button>
+                    </p>
+                </form>
+            </div>
+            <div class="getintouch">
+                <h1>Thanks for your feedback!</h1>
+            </div>
+        </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/vue"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
