--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <h1 class="header-movies">Feedback</h1>
         <div class="feedback-wrapper">
             <div class="feedback-form">
-                <form name="contact" method="POST" data-netlify="true">
+                <form name="contact" method="POST" data-netlify-recaptcha="true" data-netlify="true">
                     <p>
                       <label>Your Name: <input type="text" name="name" /></label>   
                     </p>
