--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <h1 class="header-movies">Feedback</h1>
         <div class="feedback-wrapper">
             <div class="feedback-form">
-                <form name="contact" method="POST" data-netlify-recaptcha="true" data-netlify="true">
+                <form name="contact" method="POST" netlify netlify-honeypot="bot-field">
                     <p>
                       <label>Your Name: <input type="text" name="name" /></label>   
                     </p>
@@ -60,9 +60,6 @@
                     </p>
                     <p>
                       <label>Message: <textarea name="message"></textarea></label>
-                    </p>
-                    <p>
-                        <div data-netlify-recaptcha="true"></div>
                     </p>
                     <p>
                       <button type="submit" class="btn-submit">Send</button>
